--- a/LogycaApp/res/values/strings.xml
+++ b/LogycaApp/res/values/strings.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">Logyca App</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
+    <!-- Strings for splash -->
+    <string name="splash_legend">Connect y Colaborate</string>
+    <!-- Strings for login -->
+    <!-- Strings for signup -->
 </resources>
