Login activity creation
CReate the login activity, next step its to create a correct login
layout and the libraries for the social media autentication.

--- a/LogycaApp/res/values/strings.xml
+++ b/LogycaApp/res/values/strings.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<!-- General -->
     <string name="app_name">Logyca App</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <!-- Strings for splash -->
     <string name="splash_legend">Connect y Colaborate</string>
     <!-- Strings for login -->
+    <string name="login_title">Login</string>
     <!-- Strings for signup -->
+    <!-- Other or IDK -->
+    <string name="title_activity_login">LoginActivity</string>
 </resources>
