--- a/LogycaApp/res/values/strings.xml
+++ b/LogycaApp/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="btn_text_login_google">Ingreso con Google+</string>
     <string name="btn_text_login_facebook">Ingreso con Facebook</string>
     <string name="signup_text">Registro</string>
+    <string name="logo_description">logo for logyca</string>
 </resources>
