Added NFC Support :)
Only need a tag that has a text with the url and ready to go, it opens a
web view for the selected page.

--- a/Logyca/res/values/strings.xml
+++ b/Logyca/res/values/strings.xml
@@ -19,5 +19,7 @@
     <string name="signup_text">Registro</string>
     <!-- For facebook login -->
     <string name="app_id">230149700525442</string>
-    
+    <string name="title_activity_nfcreader">NFCReaderActivity</string>
+    <string name="NFC_reader_tittle">Lector de Tags NFC</string>
+
 </resources>
