Partial support for QR Codes, It reads It!!!! :) :) :) :). tested in a blank activity but the url it's clear.

--- a/Logyca/res/values/strings.xml
+++ b/Logyca/res/values/strings.xml
@@ -49,4 +49,6 @@
     <string name="Responsable">Responsable:</string>
     <string name="Descripcion">Descripcion</string>
     <string name="link">Link</string>
+    <string name="title_activity_qrreader">QRReaderActivity</string>
+
 </resources>
