Analytics first attempt
First aproach for analytics activity, right now only track 1 event but
the app id and the events are taking form.

--- a/Logyca/res/values/strings.xml
+++ b/Logyca/res/values/strings.xml
@@ -54,5 +54,6 @@
     <string name="qr_tittle">Lector de Códigos QR</string>
     <string name="SolicitarServicio">Solicitar</string>
     <string name="ok">Ok</string>
+    <string name="title_activity_register">RegisterActivity</string>
 
 </resources>
