--- a/Logyca/res/values/strings.xml
+++ b/Logyca/res/values/strings.xml
@@ -55,5 +55,7 @@
     <string name="SolicitarServicio">Solicitar</string>
     <string name="ok">Ok</string>
     <string name="title_activity_register">RegisterActivity</string>
+    <string name="enviar_mensaje">Enviar mensaje</string>
+    <string name="Expertos">Expertos</string>
 
 </resources>
