First layout elements from the register view

--- a/Logyca/res/values/strings.xml
+++ b/Logyca/res/values/strings.xml
@@ -55,5 +55,6 @@
     <string name="SolicitarServicio">Solicitar</string>
     <string name="ok">Ok</string>
     <string name="title_activity_register">RegisterActivity</string>
+    <string name="register_tittle">Email</string>
 
 </resources>
