Loading en GPS y en todo lado
Hay loading en calcular la geolocalización y en todo lo que consuma
servicios del php.

Cambió también la logyca en la que se pone el titulo en la barra
superior, para que ahora también quede cuando se da hacia atrás. Muchos
cambios en MainActivity, beware.

--- a/Logyca/res/values/strings.xml
+++ b/Logyca/res/values/strings.xml
@@ -57,5 +57,6 @@
     <string name="title_activity_register">RegisterActivity</string>
     <string name="enviar_mensaje">Enviar mensaje</string>
     <string name="Expertos">Expertos</string>
+    <string name="Top10">Top10</string>
 
 </resources>
